--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.2"
+    "@graphql-codegen/cli": "^5.0.2",
+    "@types/styled-components": "^5.1.34"
   }
 }
